# json_backbone

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  clang-format  codecov.yml
doc/md/: main.md
docs/doxygen/source/: doxyhtml.conf  doxyxml.conf
docs/sphinx/source/: index.rst
include/: json_backbone.hpp
include/json_backbone/: base.hpp  container.hpp  container_dbl.hpp  container_dbl_u.hpp  container_ll_ldbl.hpp  container_u.hpp  externalize.hpp  unordered_base.hpp
include/json_backbone/extensions/boost_spirit_json/: json.hpp
include/json_backbone/extensions/rapidjson/: rapidjson.hpp
include/json_backbone/test/: random.hpp
includes/: nested_container.hpp
includes/json_backbone/: base.hpp  container_l_dbl.hpp  container_l_dbl_u.hpp  container_ll_ldbl.hpp  container_ll_ldbl_u.hpp  externalize.hpp
includes/json_backbone/extensions/boost_spirit_json/: externalize_json.hpp  json.hpp  json_forward.hpp
includes/json_backbone/extensions/rapidjson/: rapidjson.hpp
includes/nested_container/: base.hpp  container.hpp  container_dbl.hpp  container_dbl_u.hpp  container_double.hpp  container_l_dbl.hpp  container_l_dbl_u.hpp  container_ll_ldbl_u.hpp  container_longint_double.hpp  container_longlong_longdouble.hpp  container_u.hpp  externalize.hpp  externalize_json.hpp  json.hpp  json_forward.hpp  unordered_base.hpp
includes/nested_container/experimental/: cjson.hpp
includes/nested_container/extensions/boost_spirit_json/: externalize_json.hpp  json.hpp  json_forward.hpp
includes/nested_container/extensions/rapidjson/: rapidjson.hpp
includes/nested_container/test/: random.hpp
src/: CMakeLists.txt  nested_container.cpp
test/: CMakeLists.txt  arithmetics.cc  container.cc  container_default.cc  container_rapidjson.cc  json_backbone.cc  json_backbone_ext.cc  json_backbone_spirit.cc  main.cpp  nested_container.cc  nested_container.cpp  nested_container_ext.cc  nested_container_ext.cpp  nested_container_json.cc  nested_container_json.cpp  perf_json_cjson.cpp  perf_json_parse.cc  perf_json_parse.cpp  perf_json_serialize.cc  perf_json_serialize.cpp  readme_demos.cc  static.cc  unit_tests.cc  unit_tests.cpp  unit_tests_boost_spirit.cc  variant.cc  view.cc
